Correct the wrong path of CI after code collation

--- a/.github/workflows/selftest.yml
+++ b/.github/workflows/selftest.yml
@@ -15,7 +15,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: make
       run:  make
+    - name: selftest
+      run:  ./examples/selftest
     - name: simple
-      run:  ./simple
+      run:  ./examples/simple
     - name: make clean
       run:  make clean
